monosynth/temp.txt
It was not possible to open the file /usr/local/share/maike/maikeconfig.json. No such file or directory. Continuing search...
It was not possible to open the file /home/torbjorr/.config/maike/maikeconfig.json. No such file or directory. Continuing search...
In file included from /usr/local/include/lv2plug/lv2plug_ui.hpp:6:0,
                 from uiqt5.cpp:11:
/usr/local/include/lv2plug/client_ui.hpp: In instantiation of ‘const LV2UI_Descriptor LV2Plug::DescriptorUI<Qt5UI>::descriptor’:
/usr/local/include/lv2plug/client_ui.hpp:85:34:   required from ‘const LV2UI_Descriptor& LV2Plug::descriptorUiGet() [with ClientUI = Qt5UI; LV2UI_Descriptor = _LV2UI_Descriptor]’
uiqt5.cpp:22:41:   required from here
/usr/local/include/lv2plug/client_ui.hpp:69:25: error: no matches converting function ‘create’ to type ‘

void* (*)(const struct _LV2UI_Descriptor*, const char*, const char*, LV2UI_Write_Function, LV2UI_Controller, void**, const LV2_Feature* const*) {aka void* (*)(const struct _LV2UI_Descriptor*, const char*, const char*, void (*)(void*, unsigned int, unsigned int, unsigned int, const void*), void*, void**, const struct _LV2_Feature* const*)}’
  const LV2UI_Descriptor DescriptorUI<ClientUI>::descriptor=
                         ^
/usr/local/include/lv2plug/client_ui.hpp:28:15: note: candidate is:
template<class ClientUI>

void* LV2Plug::create(const LV2UI_Descriptor*, const char*, const char*, LV2UI_Write_Function, LV2UI_Controller, void**, LV2_Feature* const*)
  LV2UI_Handle create(const LV2UI_Descriptor* descriptor
               ^
uiqt5.cpp: It was not possible to generate __targets/monosynth-qt5.so. The compiler returned status code 1
